@@ -8,9 +8,9 @@ debian-source: dist
 	( cd ..; tar zxf @PACKAGE_NAME@_@PACKAGE_VERSION@.orig.tar.gz )
 	mkdir $(debdir)/debian
 	cp -p debian/* $(debdir)/debian
-#	cp -p doc/music-manual.tex doc/music-rfc.bib $(debdir)/doc
-#	mkdir $(debdir)/doc/figures
-#	cp -p doc/figures/*.asy $(debdir)/doc/figures
+	cp -p doc/music-manual.tex doc/music-rfc.bib $(debdir)/doc
+	mkdir $(debdir)/doc/figures
+	cp -p doc/figures/*.asy $(debdir)/doc/figures
 
 dist-hook:
 	rm $(distdir)/TODO
